--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  audit:
+  build-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,4 +21,10 @@ jobs:
           pwd
           node -v
           docker version
-          docker compose version    
+          docker compose version  
+      - name: build and test
+        run: |
+          npm ci
+          npm run build --if-present
+          ls ./dist
+          npm test
