--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches: 
       - main
+    paths:
+      - "hangman-api/**"
   pull_request:
     branches:
       - main
+    paths:
+      - "hangman-api/**"
 
 jobs:
   build-test:
