--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,17 @@ jobs:
   build-test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [14.x, 15.x, 16.x]
+        # os: [windows, linux]
+        # arch: [ARM, AMD]
+
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3 
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: inspect
         run: |
           ls -al
