--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,20 +11,18 @@ on:
 
 
 jobs:
-  build-test:
+  build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x, 15.x, 16.x]
+    #strategy:
+      #matrix:
+        #node-version: [14.x, 15.x, 16.x]
         # os: [windows, linux]
         # arch: [ARM, AMD]
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3 
-        with:
-          node-version: ${{ matrix.node-version }}
+ 
       - name: inspect
         run: |
           ls -al
@@ -38,5 +36,13 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          ls ./dist
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: test
+        working-directory: ./hangman-api
+        run: |
+          npm ci
           npm test
