--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,19 @@
 name: CI
 
 on: 
-  push:
-    branches: 
-      - main
+  #push:
+    #branches: 
+    #  - main
+    #paths:
+    #  - "./hangman-api/**"
+  workflow_dispatch:
+    
 
   pull_request:
     branches:
       - main
+    #paths:
+    #  - "./hangman-api/**"
 
 
 jobs:
