--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,54 +1,38 @@
-name: CI
+name: CI 
 
 on: 
-  #push:
-    #branches: 
-    #  - main
-    #paths:
-    #  - "./hangman-api/**"
   workflow_dispatch:
     
-
   pull_request:
     branches:
       - main
-    #paths:
-    #  - "./hangman-api/**"
-
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    #strategy:
-      #matrix:
-        #node-version: [14.x, 15.x, 16.x]
-        # os: [windows, linux]
-        # arch: [ARM, AMD]
-
     steps:
       - uses: actions/checkout@v3
- 
-      - name: inspect
-        run: |
-          ls -al
-          echo Qui soc? $(whoami)
-          pwd
-          node -v
-          docker version
-          docker compose version  
-      - name: build and test
+      - name: build
         working-directory: ./hangman-api
         run: |
           npm ci
           npm run build --if-present
-
+      - uses: actions/upload-artifact@v3 #este no acepta working-directory
+        with:
+          name: dependencies
+          path: ./hangman-api/node_modules/
+  
   test:
     runs-on: ubuntu-latest
+    needs: build
     steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: dependencies
+          path: ./hangman-api/node_modules/ 
       - uses: actions/checkout@v3
       - name: test
         working-directory: ./hangman-api
         run: |
-          npm ci
           npm test
