--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,24 +13,25 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with: 
+          node-version: 16
+          cache: npm
+          cache-dependency-path: hangman-api/package-log.json
       - name: build
         working-directory: ./hangman-api
         run: |
           npm ci
           npm run build --if-present
-      - uses: actions/upload-artifact@v3 #este no acepta working-directory
-        with:
-          name: dependencies
-          path: ./hangman-api/node_modules/
+
   
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: dependencies
-          path: ./hangman-api/node_modules/ 
+      - uses: actions/setup-node@v3
+        with: 
+          node-version: 16
       - uses: actions/checkout@v3
       - name: test
         working-directory: ./hangman-api
