--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         with: 
           node-version: 16
           cache: npm
-          cache-dependency-path: hangman-api/package-log.json
+          cache-dependency-path: hangman-api/package-lock.json
       - name: build
         working-directory: ./hangman-api
         run: |
@@ -36,4 +36,5 @@ jobs:
       - name: test
         working-directory: ./hangman-api
         run: |
+          npm ci
           npm test
